# services/orders-service/routes/cart.route.js
@@ -1,0 +1,9 @@
+const express = require('express');
+const { createCartController } = require('../controllers/cart.controller');
+
+function createCartRoute({ cartCreationService }) {
+  const router = express.Router();
+  router.post('/carts', createCartController({ cartCreationService }));
+  return router;
+}
+module.exports = { createCartRoute };
